# dexsent-task

./: README.md
custom_service/: CMakeLists.txt  package.xml
custom_service/action/: Fibonacci.action  PlanRobot.action
dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_moveit_config/config/: dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fanuc_moveit_config/: .setup_assistant  package.xml
fanuc_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
fanuc_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_moveit/: CMakeLists.txt  package.xml
robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.srdf
robot_moveit/launch/: moveit.launch.py
robot_moveit/src/: action_client.cpp  action_server.cpp  cartesian_controller.cpp  dual_arm_interface.cpp  dual_cmds.txt  kdl_test.cpp  pos_goal.cpp  robot_server.cpp  simple_moveit_interface.cpp  task_server.cpp
robotiq_description/config/: robotiq_controllers.yaml
robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
ur_description_pkg/: CMakeLists.txt  package.xml
ur_description_pkg/config/: box.world  custom.world  dual_controllers.yaml  my_controllers.yaml
ur_description_pkg/launch/: display.launch.py  dual_gazebo.launch.py  gazebo.launch.py
ur_description_pkg/meshes/prism/: triangular.stl
ur_description_pkg/urdf/: dual_arm.urdf.xacro  fanuc.urdf  robot.sdf  robot.urdf.xacro  ros2_control.xacro  ros2_control_dual.xacro  test.urdf  ur10e.urdf  wrking.urdf.xacro
